--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -230,10 +230,10 @@ footer .footer-left:hover, footer div ul li:hover{
 }
 
 /* entrée de certains éléments */
-/* section * {
+ section * {
     animation-name: fade-in;
     animation-duration: 5s;
-} */
+} 
 
 @keyframes fade-in {
     from {
@@ -250,6 +250,7 @@ footer .footer-left:hover, footer div ul li:hover{
 .modal {
 display: none;
 position: fixed;
+
 z-index: 1;
 left: 0;
 top: 0;
@@ -260,11 +261,15 @@ background-color: rgba(0, 0, 0, 0.5);
 }
 
 .modal-content {
-background: linear-gradient(#021740, #021740b7);
+display: grid;
+grid-template-rows: auto auto auto;
+justify-content: center;
+background: linear-gradient(#DF99F2 20%, #3D2DA6 80%);
+box-shadow: 0px 0px 4px 4px var(--pink-color);
 margin: 15% auto;
 padding: 20px;
 width: 50%;
-border-radius: 5%;
+border-radius: 15px;
 }
 
 /* pour fermer le modal */
@@ -280,4 +285,14 @@ cursor: pointer;
 .close:focus {
 color: var(--white-color);
 text-decoration: none;
+}
+
+.fig-time, .btn-modal{
+    display: flex;
+    justify-content: center;
+}
+
+.times{
+    margin-top: 15px;
+    justify-content: center;
 }
