gestion reponse et form

--- a/assets/css/accueil.css
+++ b/assets/css/accueil.css
@@ -24,17 +24,17 @@
 
 .vertical-line1 {
     border-left: 3px solid var(--purple-color);
-    /*min-height: 29vw;*/
-    min-height: 0%;
-    /*height: 0;*/
-    transition: height 2s ease;
+    min-height: 29vw;
+    /*min-height: 0%;
+    /*height: 0;
+    transition: height 2s ease;*/
 }
 
 .vertical-line2 {
     border-left: 3px solid var(--purple-color); 
-    /*height: 19.1vw;*/
-    min-height: 0%;
-    transition: height 2s ease;
+    height: 19.1vw;
+    /*min-height: 0%;
+    transition: height 2s ease;*/
 }
 
 .vertical-icon {
@@ -311,5 +311,9 @@ button[type='submit']:hover {
     margin-bottom: -12%;
     height: 12vw;
     padding: 2% 0 0 85%;
+}
+
+.modal{
+    display: none;
 }
 
